--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -21,7 +21,9 @@ discriminator:
     learning_rate_disc: 1e-5
 
 train:
-    training_range: ['201603', '201802'] # Start and end of training period, in YYYYMM format
+    # training_range: ['201603', '201802'] # Start and end of training period, in YYYYMM format 
+    training_range: ['200101', '200201'] # Start and end of training period, in YYYYMM format
+
     training_weights: [0.25, 0.25, 0.25, 0.25]
     num_epochs: 5
     steps_per_checkpoint: 3200
