--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -22,7 +22,7 @@ discriminator:
 
 train:
     # training_range: ['201603', '201802'] # Start and end of training period, in YYYYMM format 
-    training_range: ['200201', '200212'] # Start and end of training period, in YYYYMM format
+    training_range: ['200301', '200312'] # Start and end of training period, in YYYYMM 
 
     training_weights: [0.25, 0.25, 0.25, 0.25]
     num_epochs: 5
@@ -38,3 +38,6 @@ val:
     val_range: ['201806', '201905'] # cannot pass a list if using create_fixed_dataset
     val_size: 100
     ensemble_size: 20
+
+
+#test
