--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -18,11 +18,11 @@ generator:
 
 discriminator:
     filters_disc: 256
-    learning_rate_disc: 1e-5
+    learning_rate_disc: 1e-5s
 
 train:
     # training_range: ['201603', '201802'] # Start and end of training period, in YYYYMM format 
-    training_range: ['200401', '200412'] # Start and end of training period, in YYYYMM 
+    training_range: ['200501', '200512'] # Start and end of training period, in YYYYMM 
 
     training_weights: [0.25, 0.25, 0.25, 0.25]
     num_epochs: 5
