update the model.yaml file

--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -32,7 +32,7 @@ train:
     ensemble_size: 8  # size of pred ensemble for content loss
     CL_type: "ensmeanMSE" # type of content loss to use: 'CRPS', 'CRPS_phys', 'ensmeanMSE', 'ensmeanMSE_phys' # we can change it after for the evaluation part
     content_loss_weight: 1000.0
-    img_chunk_width: 352
+    img_chunk_width: None
 
 val:
     val_range: ['201806', '201905'] # cannot pass a list if using create_fixed_dataset
