--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -33,6 +33,7 @@ train:
     CL_type: "ensmeanMSE" # type of content loss to use: 'CRPS', 'CRPS_phys', 'ensmeanMSE', 'ensmeanMSE_phys' # we can change it after for the evaluation part
     content_loss_weight: 1000.0
     img_chunk_width: None
+    batch_size: 2  #the batch size
 
 val:
     val_range: ['201806', '201905'] # cannot pass a list if using create_fixed_dataset
