--- a/environment.yaml
+++ b/environment.yaml
@@ -33,7 +33,6 @@ dependencies:
   - wandb
   - timezonefinder
   - metpy
-  - gitpython
   - jupytext
-  pip:
-    - tensorflow-gpu=2.8.2
+pip:
+  - tensorflow-gpu==2.8.2
