update the model_config file

--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -12,8 +12,8 @@ downscaling_steps: [1]  # list of integers that multiply to the downscaling fact
 
 
 generator:
-    # filters_gen: 64
-    filters_gen: 128
+    filters_gen: 64
+    # filters_gen: 128
     noise_channels: 4 # used for GAN
     latent_variables: 1 # used for VAEGAN
     learning_rate_gen: 1e-5
@@ -29,13 +29,13 @@ train:
     training_weights: [0.25, 0.25, 0.25, 0.25]
     num_epochs: 5
     steps_per_checkpoint: 3200
-    batch_size: 2  # can use 400x16 without CL, or 3200x2 with CL
+    batch_size: 1  # can use 400x16 without CL, or 3200x2 with CL
     kl_weight: 1e-8  # used for VAEGAN
     ensemble_size: 8  # size of pred ensemble for content loss
     CL_type: "ensmeanMSE" # type of content loss to use: 'CRPS', 'CRPS_phys', 'ensmeanMSE', 'ensmeanMSE_phys' # we can change it after for the evaluation part
     content_loss_weight: 1000.0
     img_chunk_width: None
-    batch_size: 1  #the batch size
+    # batch_size: 1  #the batch size
 
 val:
    # val_range: ['201801', '201812'] 
