--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -34,7 +34,8 @@ train:
     ensemble_size: 8  # size of pred ensemble for content loss
     CL_type: "ensmeanMSE" # type of content loss to use: 'CRPS', 'CRPS_phys', 'ensmeanMSE', 'ensmeanMSE_phys' # we can change it after for the evaluation part
     content_loss_weight: 1000.0
-    img_chunk_width: None
+    # img_chunk_width: None
+    img_chunk_width: 200
     # batch_size: 1  #the batch size
 
 val:
