--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -23,19 +23,21 @@ discriminator:
     learning_rate_disc: 1e-5
 
 train:
-    training_range: ['201603', '201802'] # Start and end of training period, in YYYYMM format 
-    # training_range: ['201801', '201802'] # Start and end of training period, in YYYYMM 
+    # training_range: ['201603', '201802'] # Start and end of training period, in YYYYMM format 
+    training_range: ['201801', '201812'] # Start and end of training period, in YYYYMM 
 
     training_weights: [0.25, 0.25, 0.25, 0.25]
-    num_epochs: 5
-    steps_per_checkpoint: 32
-    batch_size: 1  # can use 400x16 without CL, or 3200x2 with CL
+    num_epochs: 6
+    steps_per_checkpoint: 3
+    batch_size: 2  # can use 400x16 without CL, or 3200x2 with CL
     kl_weight: 1e-8  # used for VAEGAN
     ensemble_size: 8  # size of pred ensemble for content loss
     CL_type: "ensmeanMSE" # type of content loss to use: 'CRPS', 'CRPS_phys', 'ensmeanMSE', 'ensmeanMSE_phys' # we can change it after for the evaluation part
     content_loss_weight: 1000.0
     # img_chunk_width: None
     img_chunk_width: 200
+    num_samples: 6
+    
     # batch_size: 1  #the batch size
 
 val:
