--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -57,3 +57,9 @@ EVAL:
     postprocessing_noise_factor: 1e-3  # factor for scaling postprocessing noise in rank statistics eval
     max_pooling: True  # also calculate CRPS using max pooling over larger regions
     avg_pooling: True  # ditto for average pooling
+
+#use for wandb logging 
+wandb:
+    entity: "melvinfokam"  # the entity (team) name for Weights & Biases logging
+    project_name: "neuralgcm-cgan-east-africa"
+    debug_project_name: "neuralgcm-cgan-test"
