--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -26,15 +26,15 @@ train:
 
     training_weights: [0.25, 0.25, 0.25, 0.25]
     num_epochs: 5
-    steps_per_checkpoint: 10000
+    steps_per_checkpoint: 100
     batch_size: 2  # can use 400x16 without CL, or 3200x2 with CL
     kl_weight: 1e-8  # used for VAEGAN
     ensemble_size: 8  # size of pred ensemble for content loss
     CL_type: "ensmeanMSE" # type of content loss to use: 'CRPS', 'CRPS_phys', 'ensmeanMSE', 'ensmeanMSE_phys' # we can change it after for the evaluation part
     content_loss_weight: 1000.0
-    # img_chunk_width: None
-    img_chunk_width: 256
-    num_samples: 32
+    img_chunk_width: None
+    # img_chunk_width: 256
+    num_samples: 320000
     
 
 val:
