Update output folder path in forecast_gfs.yaml

--- a/config/forecast_gfs.yaml
+++ b/config/forecast_gfs.yaml
@@ -14,7 +14,7 @@ INPUT:
     end_hour: 54
 
 OUTPUT:
-    folder: "/home/melvin_aims_ac_za/notebooks/outputs/"
+    folder: "/outputs/"
     ensemble_members: 50
 
 Data:
